Refactoring code and fixing some null issues about the JSON data.